add contact API and contact test case
